--- a/index.html
+++ b/index.html
@@ -56,4 +56,4 @@
 
 
 
-<div data-silex-type="text" class="editable-style silex-id-1540377257999-5 text-element text-style-2" style=""><div class="silex-element-content normal"><p>CASTLEWORKS</p></div></div></body></html>
+<div data-silex-type="text" class="editable-style silex-id-1540377257999-5 text-element text-style-2" style=""><div class="silex-element-content normal"><p><b style=""><font size="6"><u>CASTLEWORKS</u></font></b><font size="1">Pty. Ltd.</font></p></div></div></body></html>
