--- a/index.html
+++ b/index.html
@@ -54,4 +54,4 @@
 
 
 
-<div data-silex-type="text" class="editable-style silex-id-1540377257999-5 text-element text-style-2" style=""><div class="silex-element-content normal"><p><b style=""><font size="6"><u>CASTLEWORKS</u></font></b><font size="1">Pty. Ltd.</font></p></div></div></body></html>
+<div data-silex-type="image" class="editable-style silex-id-1542690714474-2 image-element" style=""><img src="assets/beer2.jpg" class="silex-element-content"></div><div data-silex-type="text" class="editable-style silex-id-1540377257999-5 text-element text-style-2" style=""><div class="silex-element-content normal"><p><b style=""><u style=""><font size="4">CASTLEWORKS</font></u></b><font size="1">Pty. Ltd.</font></p></div></div></body></html>
